Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83082

Q12020 Flaky failing autotest function requestInterceptorByResourceType in qwebengineurlrequestinterceptor

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.0 RC
    • 5.15
    • WebEngine
    • None
    • Windows
    • a05bb73747620dd8f0294a57ff690a4f4202884e

      I made a quick check if there is already a bug report or a bug fix for this test case. No obvious explicit information was found. Therefore a new bug report is added.

      Here is the log from the incident

      Coin task #1: http://coin/coin/integration/qt/qtwebengine/tasks/1582369541

      Host OS version: Windows_10, target OS Windows_10, MSCV2017 compiler

      Log #1: http://coin/coin/logview/qt/qtwebengine/2e8258ef3679707a2a9245c85bc8490251b3e256/WindowsWindows_10x86_64WindowsWindows_10x86_64MSVC2017qtci-windows-10-x86_64-16-284bc3/95762638d4409e68ae158dc59d02bfc2dab83806/test_1582369649

      ********* Start testing of tst_QWebEngineUrlRequestInterceptor *********
      Config: Using QtTest library 5.15.0, Qt 5.15.0 (x86_64-little_endian-llp64 shared (dynamic) release build; by MSVC 2017)
      PASS : tst_QWebEngineUrlRequestInterceptor::initTestCase()
      QWARN : tst_QWebEngineUrlRequestInterceptor::interceptRequest() QResource '/resources/__placeholder__' not found or is empty
      PASS : tst_QWebEngineUrlRequestInterceptor::interceptRequest()
      QWARN : tst_QWebEngineUrlRequestInterceptor::ipv6HostEncoding() js: Synchronous XMLHttpRequest on the main thread is deprecated because of its detrimental effects to the end user's experience. For more help, check https://xhr.spec.whatwg.org/.
      QSYSTEM: tst_QWebEngineUrlRequestInterceptor::ipv6HostEncoding() js: Uncaught NetworkError: Failed to execute 'send' on 'XMLHttpRequest': Failed to load 'http://[::1]/test.xml'.
      PASS : tst_QWebEngineUrlRequestInterceptor::ipv6HostEncoding()
      QWARN : tst_QWebEngineUrlRequestInterceptor::requestedUrl(Profile intercept) QResource '/non-existent.html' not found or is empty
      PASS : tst_QWebEngineUrlRequestInterceptor::requestedUrl(Profile intercept)
      QWARN : tst_QWebEngineUrlRequestInterceptor::requestedUrl(Page intercept) QResource '/non-existent.html' not found or is empty
      PASS : tst_QWebEngineUrlRequestInterceptor::requestedUrl(Page intercept)
      PASS : tst_QWebEngineUrlRequestInterceptor::setUrlSameUrl(Profile intercept)
      PASS : tst_QWebEngineUrlRequestInterceptor::setUrlSameUrl(Page intercept)
      PASS : tst_QWebEngineUrlRequestInterceptor::firstPartyUrl()
      PASS : tst_QWebEngineUrlRequestInterceptor::firstPartyUrlNestedIframes(file)
      PASS : tst_QWebEngineUrlRequestInterceptor::firstPartyUrlNestedIframes(qrc)
      QWARN : tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(StyleSheet) js: Synchronous XMLHttpRequest on the main thread is deprecated because of its detrimental effects to the end user's experience. For more help, check https://xhr.spec.whatwg.org/.
      QSYSTEM: tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(StyleSheet) js: Uncaught NetworkError: Failed to execute 'send' on 'XMLHttpRequest': Failed to load 'file:///C:/Users/qt/work/qt/qtwebengine/tests/auto/core/qwebengineurlrequestinterceptor/resources/test'.
      PASS : tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(StyleSheet)
      QWARN : tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(Script) js: Synchronous XMLHttpRequest on the main thread is deprecated because of its detrimental effects to the end user's experience. For more help, check https://xhr.spec.whatwg.org/.
      QSYSTEM: tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(Script) js: Uncaught NetworkError: Failed to execute 'send' on 'XMLHttpRequest': Failed to load 'file:///C:/Users/qt/work/qt/qtwebengine/tests/auto/core/qwebengineurlrequestinterceptor/resources/test'.
      PASS : tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(Script)
      PASS : tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(Image)
      QWARN : tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(FontResource) js: Synchronous XMLHttpRequest on the main thread is deprecated because of its detrimental effects to the end user's experience. For more help, check https://xhr.spec.whatwg.org/.
      QSYSTEM: tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(FontResource) js: Uncaught NetworkError: Failed to execute 'send' on 'XMLHttpRequest': Failed to load 'file:///C:/Users/qt/work/qt/qtwebengine/tests/auto/core/qwebengineurlrequestinterceptor/resources/test'.
      PASS : tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(FontResource)
      PASS : tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(Media)
      PASS : tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(Favicon)
      QWARN : tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(Xhr) js: Synchronous XMLHttpRequest on the main thread is deprecated because of its detrimental effects to the end user's experience. For more help, check https://xhr.spec.whatwg.org/.
      QSYSTEM: tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(Xhr) js: Uncaught NetworkError: Failed to execute 'send' on 'XMLHttpRequest': Failed to load 'file:///C:/Users/qt/work/qt/qtwebengine/tests/auto/core/qwebengineurlrequestinterceptor/resources/test'.
      FAIL! : tst_QWebEngineUrlRequestInterceptor::requestInterceptorByResourceType(Xhr) QTestLib: This test case check ("((((loadSpy.count())) == (1)))") failed because the requested timeout (5000 ms) was too short, 7400 ms would have been sufficient this time.
      .\tst_qwebengineurlrequestinterceptor.cpp(462) : failure location
      QWARN : tst_QWebEngineUrlRequestInterceptor::firstPartyUrlHttp() js: fun-hooks: referenced 'registerAdserver' but it was never created
      QWARN : tst_QWebEngineUrlRequestInterceptor::firstPartyUrlHttp() js: [snhb](5.099s): Setting AdSense to deliver non targeted ads...
      QWARN : tst_QWebEngineUrlRequestInterceptor::firstPartyUrlHttp() js: [snhb](5.106s): Automatic auction starting disabled. Use snhb.snhb.getAllAvailableAdUnitNames() and snhb.startAuction([adUnitNames]) to manually start auctions.
      SKIP : tst_QWebEngineUrlRequestInterceptor::firstPartyUrlHttp() Couldn't load page from network, skipping test.
      .\tst_qwebengineurlrequestinterceptor.cpp(483) : failure location
      QINFO : tst_QWebEngineUrlRequestInterceptor::passRefererHeader() HttpServer: GET / 200 0
      PASS : tst_QWebEngineUrlRequestInterceptor::passRefererHeader()
      QWARN : tst_QWebEngineUrlRequestInterceptor::initiator() js: fun-hooks: referenced 'registerAdserver' but it was never created
      QWARN : tst_QWebEngineUrlRequestInterceptor::initiator() js: [snhb](4.33s): Setting AdSense to deliver non targeted ads...
      QWARN : tst_QWebEngineUrlRequestInterceptor::initiator() js: [snhb](4.392s): Automatic auction starting disabled. Use snhb.snhb.getAllAvailableAdUnitNames() and snhb.startAuction([adUnitNames]) to manually start auctions.
      QWARN : tst_QWebEngineUrlRequestInterceptor::initiator() js: [snhb](6.183s): Setting DFP to deliver non targeted ads...
      PASS : tst_QWebEngineUrlRequestInterceptor::initiator()
      PASS : tst_QWebEngineUrlRequestInterceptor::cleanupTestCase()
      Totals: 19 passed, 1 failed, 1 skipped, 0 blacklisted, 53760ms
      ********* Finished testing of tst_QWebEngineUrlRequestInterceptor *********
      

      Externally accessible log: https://testresults.qt.io/coin/integration/qt/qtwebengine/tasks/1582369541

      The wanted action

      • Please delegate this task to a suitable developer
      • Fix the autotest flakiness in all affected versions, not just one. 
      • Cherry-pick the fix to all relevant branches
      • Mark the fix versions to Jira
      • Try to fix the actual issue instead of just blacklisting the test function
      • Find any possible directly or indirectly related bug reports and mark it as a resolved duplicate.

      Guidelines for debugging

      Please see the internal page https://intranet.qt.io/display/QTRD/Metrics+Guidelines+for+Grafana+Tool+for+Autotests+with+Issues

      How to locate the failed flaky test:

      Please open the link to the Grafana dashboard showing the failure history of the test:

      https://testresults.qt.io/grafana/d/5GKDJSPZz/02-qt-framework-please-fix-these-flaky-tests-random-fails?orgId=1&from=now%2Fy&to=now&var-project=qt%2Fqtwebengine&var-testcase=tests%2Fauto%2Fcore%2Fqwebengineurlrequestinterceptor&var-testfunction=requestInterceptorByResourceType&var-branch=5.12&var-branch=5.13&var-branch=5.14&var-branch=5.15&var-branch=dev&var-inter=24h

      Please see the panel List of the recent flaky tests (both passed and failed). Sort it based on the results to see the failed instances. 

      Please open the links to the Coin tasks containing the logs. Please see the test section containing state "Error" and open corresponding logs. 

      Need to know more about the test binary execution history?

      Please see this Grafana dashboard: 

      https://testresults.qt.io/grafana/d/C-1oxSEWz/04-qt-framework-please-see-the-flakiness-history-of-tests?orgId=1&from=now%2Fy&to=now&var-project=qt%2Fqtwebengine&var-testcase=tests%2Fauto%2Fcore%2Fqwebengineurlrequestinterceptor&var-testfunction=requestInterceptorByResourceType&var-branch=5.12&var-branch=5.13&var-branch=5.14&var-branch=5.15&var-branch=dev&var-inter=24h

       

        For Gerrit Dashboard: QTBUG-83082
        # Subject Branch Project Status CR V

            michal Michal Klocek
            assaarel Asmo Saarela (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes