src/core/web_contents_adapter.h
@@ -61,6 +61,7 @@
 #include <QSharedPointer>
 #include <QString>
 #include <QUrl>
+#include <QPointer>
 
 namespace content {
 class WebContents;
@@ -79,6 +80,7 @@ class QPageLayout;
 class QString;
 class QTemporaryDir;
 class QWebChannel;
+class QWebEngineUrlRequestInterceptor;
 QT_END_NAMESPACE
 
 namespace QtWebEngineCore {
@@ -235,6 +237,8 @@ public:
     void initialize(content::SiteInstance *site);
     content::WebContents *webContents() const;
     void updateRecommendedState();
+    void setRequestInterceptor(QWebEngineUrlRequestInterceptor *interceptor);
+    QWebEngineUrlRequestInterceptor* requestInterceptor() const;
 
 private:
     Q_DISABLE_COPY(WebContentsAdapter)
@@ -274,6 +278,7 @@ private:
     LifecycleState m_lifecycleState = LifecycleState::Active;
     LifecycleState m_recommendedState = LifecycleState::Active;
     bool m_inspector = false;
+    QPointer<QWebEngineUrlRequestInterceptor> m_requestInterceptor;
 };
 
 } // namespace QtWebEngineCore
